--- a/src/layouts/header/index.less
+++ b/src/layouts/header/index.less
@@ -12,6 +12,13 @@
   border-bottom: 1px solid var(--color-border);
   background-color: var(--color-bg-2);
 
+  &--fixed {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+  }
+
   &-left {
     display: flex;
     align-items: center;
@@ -137,8 +144,6 @@
       li {
         padding: 0 8px;
       }
-
-
 
       .link {
         color: var(--color-text-1);
